; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_item_is_scene.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_item_is_scene.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_scene_item = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }

@OBS_SOURCE_TYPE_SCENE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.obs_scene_item*)* @item_is_scene to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @item_is_scene(%struct.obs_scene_item* %0) #0 {
  %2 = alloca %struct.obs_scene_item*, align 8
  store %struct.obs_scene_item* %0, %struct.obs_scene_item** %2, align 8
  %3 = load %struct.obs_scene_item*, %struct.obs_scene_item** %2, align 8
  %4 = getelementptr inbounds %struct.obs_scene_item, %struct.obs_scene_item* %3, i32 0, i32 0
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %6 = icmp ne %struct.TYPE_4__* %5, null
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load %struct.obs_scene_item*, %struct.obs_scene_item** %2, align 8
  %9 = getelementptr inbounds %struct.obs_scene_item, %struct.obs_scene_item* %8, i32 0, i32 0
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @OBS_SOURCE_TYPE_SCENE, align 8
  %15 = icmp eq i64 %13, %14
  br label %16

16:                                               ; preds = %7, %1
  %17 = phi i1 [ false, %1 ], [ %15, %7 ]
  %18 = zext i1 %17 to i32
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
